src/main/java/net/citizensnpcs/adventures/dialog/DialogParser.java
// $ANTLR 3.4 Dialog.g 2013-01-23 22:32:47

package net.citizensnpcs.adventures.dialog;
import java.util.Collection;
import java.util.concurrent.TimeUnit;
import com.google.common.base.Predicates;
import net.citizensnpcs.adventures.dialog.*;
import net.citizensnpcs.adventures.dialog.statements.*;
import net.citizensnpcs.adventures.dialog.evaluators.*;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked"})
public class DialogParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "DIGIT", "IDENT", "INTEGER", "LETTER", "LINE_COMMENT", "ML_COMMENT", "NEWLINE", "NUMBER", "QUERY_STRING", "STRING_LITERAL", "WS", "'!='", "'%'", "'('", "')'", "'*'", "'**'", "'+'", "','", "'-'", "'-p'", "'/'", "';'", "'<'", "'<='", "'='", "'>'", "'>='", "'criteria'", "'d'", "'events='", "'h'", "'log'", "'m'", "'ms'", "'ns'", "'remember'", "'response'", "'rule'", "'s'", "'then'", "'us'", "'{'", "'}'"
    };

    public static final int EOF=-1;
    public static final int T__15=15;
    public static final int T__16=16;
    public static final int T__17=17;
    public static final int T__18=18;
    public static final int T__19=19;
    public static final int T__20=20;
    public static final int T__21=21;
    public static final int T__22=22;
    public static final int T__23=23;
    public static final int T__24=24;
    public static final int T__25=25;
    public static final int T__26=26;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int DIGIT=4;
    public static final int IDENT=5;
    public static final int INTEGER=6;
    public static final int LETTER=7;
    public static final int LINE_COMMENT=8;
    public static final int ML_COMMENT=9;
    public static final int NEWLINE=10;
    public static final int NUMBER=11;
    public static final int QUERY_STRING=12;
    public static final int STRING_LITERAL=13;
    public static final int WS=14;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public DialogParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public DialogParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

    public String[] getTokenNames() { return DialogParser.tokenNames; }
    public String getGrammarFileName() { return "Dialog.g"; }


    /*  @Override
        public void reportError(RecognitionException e) {
            throw e;
        }
    */
    private VariableSource variableSource;

    public void setVariableSource(VariableSource source) {
        this.variableSource = source;
    }



    // $ANTLR start "program"
    // Dialog.g:48:1: program[DialogEngine.ParseContext context] : ( rule | response )* ;
    public final void program(DialogEngine.ParseContext context) throws RecognitionException {
        DialogParser.rule_return rule1 =null;

        Response response2 =null;


        try {
            // Dialog.g:48:45: ( ( rule | response )* )
            // Dialog.g:49:5: ( rule | response )*
            {
            // Dialog.g:49:5: ( rule | response )*
            loop1:
            do {
                int alt1=3;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==42) ) {
                    alt1=1;
                }
                else if ( (LA1_0==41) ) {
                    alt1=2;
                }


                switch (alt1) {
            	case 1 :
            	    // Dialog.g:50:9: rule
            	    {
            	    pushFollow(FOLLOW_rule_in_program81);
            	    rule1=rule();

            	    state._fsp--;


            	     context.ruleLoaded((rule1!=null?rule1.eventNames:null), (rule1!=null?rule1.rule:null)); 

            	    }
            	    break;
            	case 2 :
            	    // Dialog.g:51:11: response
            	    {
            	    pushFollow(FOLLOW_response_in_program95);
            	    response2=response();

            	    state._fsp--;


            	     context.responseLoaded(response2); 

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            }

        }

        catch (RecognitionException e) {
            throw e;
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "program"



    // $ANTLR start "response"
    // Dialog.g:54:1: response returns [Response response] : 'response' IDENT '{' ( response_statement[builder] ';' )* '}' ;
    public final Response response() throws RecognitionException {
        Response response = null;


        Token IDENT3=null;

        try {
            // Dialog.g:54:38: ( 'response' IDENT '{' ( response_statement[builder] ';' )* '}' )
            // Dialog.g:55:5: 'response' IDENT '{' ( response_statement[builder] ';' )* '}'
            {
             Response.Builder builder = Response.builder(); 

            match(input,41,FOLLOW_41_in_response127); 

            IDENT3=(Token)match(input,IDENT,FOLLOW_IDENT_in_response129); 

             builder.name((IDENT3!=null?IDENT3.getText():null)); 

            match(input,46,FOLLOW_46_in_response133); 

            // Dialog.g:56:57: ( response_statement[builder] ';' )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==36||LA2_0==40) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // Dialog.g:56:58: response_statement[builder] ';'
            	    {
            	    pushFollow(FOLLOW_response_statement_in_response136);
            	    response_statement(builder);

            	    state._fsp--;


            	    match(input,26,FOLLOW_26_in_response139); 

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            match(input,47,FOLLOW_47_in_response143); 

             response = builder.build(); 

            }

        }

        catch (RecognitionException e) {
            throw e;
        }

        finally {
        	// do for sure before leaving
        }
        return response;
    }
    // $ANTLR end "response"



    // $ANTLR start "response_statement"
    // Dialog.g:60:1: response_statement[Response.Builder builder] : ( 'log' expression | remember_statement );
    public final void response_statement(Response.Builder builder) throws RecognitionException {
        Evaluator expression4 =null;

        QueryRunnable remember_statement5 =null;


        try {
            // Dialog.g:60:47: ( 'log' expression | remember_statement )
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==36) ) {
                alt3=1;
            }
            else if ( (LA3_0==40) ) {
                alt3=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;

            }
            switch (alt3) {
                case 1 :
                    // Dialog.g:61:5: 'log' expression
                    {
                    match(input,36,FOLLOW_36_in_response_statement168); 

                    pushFollow(FOLLOW_expression_in_response_statement170);
                    expression4=expression();

                    state._fsp--;


                     builder.statement(Log.logging(expression4)); 

                    }
                    break;
                case 2 :
                    // Dialog.g:62:7: remember_statement
                    {
                    pushFollow(FOLLOW_remember_statement_in_response_statement180);
                    remember_statement5=remember_statement();

                    state._fsp--;


                     builder.statement(remember_statement5); 

                    }
                    break;

            }
        }

        catch (RecognitionException e) {
            throw e;
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "response_statement"


    public static class rule_return extends ParserRuleReturnScope {
        public Collection<String> eventNames;
        public Rule rule;
    };


    // $ANTLR start "rule"
    // Dialog.g:65:1: rule returns [Collection<String> eventNames, Rule rule] : 'rule' IDENT '{' criteria ';' ( rule_statement[builder] ';' )* '}' ;
    public final DialogParser.rule_return rule() throws RecognitionException {
        DialogParser.rule_return retval = new DialogParser.rule_return();
        retval.start = input.LT(1);


        Token IDENT6=null;
        Collection<String> criteria7 =null;


        try {
            // Dialog.g:65:56: ( 'rule' IDENT '{' criteria ';' ( rule_statement[builder] ';' )* '}' )
            // Dialog.g:66:5: 'rule' IDENT '{' criteria ';' ( rule_statement[builder] ';' )* '}'
            {
             Rule.Builder builder = Rule.builder(); 

            match(input,42,FOLLOW_42_in_rule209); 

            IDENT6=(Token)match(input,IDENT,FOLLOW_IDENT_in_rule211); 

             builder.name((IDENT6!=null?IDENT6.getText():null)); 

            match(input,46,FOLLOW_46_in_rule215); 

            pushFollow(FOLLOW_criteria_in_rule217);
            criteria7=criteria();

            state._fsp--;


             retval.eventNames = criteria7; 

            match(input,26,FOLLOW_26_in_rule221); 

            // Dialog.g:67:106: ( rule_statement[builder] ';' )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( ((LA4_0 >= 40 && LA4_0 <= 41)) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // Dialog.g:67:107: rule_statement[builder] ';'
            	    {
            	    pushFollow(FOLLOW_rule_statement_in_rule224);
            	    rule_statement(builder);

            	    state._fsp--;


            	    match(input,26,FOLLOW_26_in_rule227); 

            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);


            match(input,47,FOLLOW_47_in_rule231); 

             retval.rule = builder.build(); 

            }

            retval.stop = input.LT(-1);


        }

        catch (RecognitionException e) {
            throw e;
        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "rule"



    // $ANTLR start "rule_statement"
    // Dialog.g:71:1: rule_statement[Rule.Builder builder] : ( ( 'response' n= IDENT ( 'then' (target= IDENT |target= NUMBER ) event= IDENT )? ) | remember_statement );
    public final void rule_statement(Rule.Builder builder) throws RecognitionException {
        Token n=null;
        Token target=null;
        Token event=null;
        QueryRunnable remember_statement8 =null;


        try {
            // Dialog.g:71:39: ( ( 'response' n= IDENT ( 'then' (target= IDENT |target= NUMBER ) event= IDENT )? ) | remember_statement )
            int alt7=2;
            int LA7_0 = input.LA(1);

            if ( (LA7_0==41) ) {
                alt7=1;
            }
            else if ( (LA7_0==40) ) {
                alt7=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 7, 0, input);

                throw nvae;

            }
            switch (alt7) {
                case 1 :
                    // Dialog.g:72:5: ( 'response' n= IDENT ( 'then' (target= IDENT |target= NUMBER ) event= IDENT )? )
                    {
                    // Dialog.g:72:5: ( 'response' n= IDENT ( 'then' (target= IDENT |target= NUMBER ) event= IDENT )? )
                    // Dialog.g:72:6: 'response' n= IDENT ( 'then' (target= IDENT |target= NUMBER ) event= IDENT )?
                    {
                    match(input,41,FOLLOW_41_in_rule_statement261); 

                    n=(Token)match(input,IDENT,FOLLOW_IDENT_in_rule_statement265); 

                     CallResponse.Builder responseBuilder = CallResponse.builder((n!=null?n.getText():null)); 

                    // Dialog.g:73:9: ( 'then' (target= IDENT |target= NUMBER ) event= IDENT )?
                    int alt6=2;
                    int LA6_0 = input.LA(1);

                    if ( (LA6_0==44) ) {
                        alt6=1;
                    }
                    switch (alt6) {
                        case 1 :
                            // Dialog.g:73:10: 'then' (target= IDENT |target= NUMBER ) event= IDENT
                            {
                            match(input,44,FOLLOW_44_in_rule_statement279); 

                            // Dialog.g:73:17: (target= IDENT |target= NUMBER )
                            int alt5=2;
                            int LA5_0 = input.LA(1);

                            if ( (LA5_0==IDENT) ) {
                                alt5=1;
                            }
                            else if ( (LA5_0==NUMBER) ) {
                                alt5=2;
                            }
                            else {
                                NoViableAltException nvae =
                                    new NoViableAltException("", 5, 0, input);

                                throw nvae;

                            }
                            switch (alt5) {
                                case 1 :
                                    // Dialog.g:73:18: target= IDENT
                                    {
                                    target=(Token)match(input,IDENT,FOLLOW_IDENT_in_rule_statement284); 

                                    }
                                    break;
                                case 2 :
                                    // Dialog.g:73:33: target= NUMBER
                                    {
                                    target=(Token)match(input,NUMBER,FOLLOW_NUMBER_in_rule_statement290); 

                                    }
                                    break;

                            }


                            event=(Token)match(input,IDENT,FOLLOW_IDENT_in_rule_statement295); 

                             responseBuilder.callback(new CallEventCallback((target!=null?target.getText():null), (event!=null?event.getText():null))); 

                            }
                            break;

                    }


                     builder.statement(responseBuilder.build()); 

                    }


                    }
                    break;
                case 2 :
                    // Dialog.g:75:7: remember_statement
                    {
                    pushFollow(FOLLOW_remember_statement_in_rule_statement319);
                    remember_statement8=remember_statement();

                    state._fsp--;


                     builder.statement(remember_statement8); 

                    }
                    break;

            }
        }

        catch (RecognitionException e) {
            throw e;
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "rule_statement"



    // $ANTLR start "remember_statement"
    // Dialog.g:78:1: remember_statement returns [QueryRunnable statement] : 'remember' remember_assignment[builder] ( ',' remember_assignment[builder] )* ;
    public final QueryRunnable remember_statement() throws RecognitionException {
        QueryRunnable statement = null;


        try {
            // Dialog.g:78:54: ( 'remember' remember_assignment[builder] ( ',' remember_assignment[builder] )* )
            // Dialog.g:79:5: 'remember' remember_assignment[builder] ( ',' remember_assignment[builder] )*
            {
             Remember.Builder builder = Remember.builder(); 

            match(input,40,FOLLOW_40_in_remember_statement348); 

            pushFollow(FOLLOW_remember_assignment_in_remember_statement350);
            remember_assignment(builder);

            state._fsp--;


            // Dialog.g:80:45: ( ',' remember_assignment[builder] )*
            loop8:
            do {
                int alt8=2;
                int LA8_0 = input.LA(1);

                if ( (LA8_0==22) ) {
                    alt8=1;
                }


                switch (alt8) {
            	case 1 :
            	    // Dialog.g:80:46: ',' remember_assignment[builder]
            	    {
            	    match(input,22,FOLLOW_22_in_remember_statement354); 

            	    pushFollow(FOLLOW_remember_assignment_in_remember_statement356);
            	    remember_assignment(builder);

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop8;
                }
            } while (true);


             statement = builder.build(); 

            }

        }

        catch (RecognitionException e) {
            throw e;
        }

        finally {
        	// do for sure before leaving
        }
        return statement;
    }
    // $ANTLR end "remember_statement"



    // $ANTLR start "remember_assignment"
    // Dialog.g:84:1: remember_assignment[Remember.Builder builder] : QUERY_STRING '=' expression i1= INTEGER i2= time_unit ( '-p' )? ;
    public final void remember_assignment(Remember.Builder builder) throws RecognitionException {
        Token i1=null;
        Token QUERY_STRING9=null;
        TimeUnit i2 =null;

        Evaluator expression10 =null;


        try {
            // Dialog.g:84:48: ( QUERY_STRING '=' expression i1= INTEGER i2= time_unit ( '-p' )? )
            // Dialog.g:85:5: QUERY_STRING '=' expression i1= INTEGER i2= time_unit ( '-p' )?
            {
             boolean isPersistent = false; 

            QUERY_STRING9=(Token)match(input,QUERY_STRING,FOLLOW_QUERY_STRING_in_remember_assignment390); 

            match(input,29,FOLLOW_29_in_remember_assignment392); 

            pushFollow(FOLLOW_expression_in_remember_assignment394);
            expression10=expression();

            state._fsp--;


            i1=(Token)match(input,INTEGER,FOLLOW_INTEGER_in_remember_assignment398); 

            pushFollow(FOLLOW_time_unit_in_remember_assignment402);
            i2=time_unit();

            state._fsp--;


            // Dialog.g:86:57: ( '-p' )?
            int alt9=2;
            int LA9_0 = input.LA(1);

            if ( (LA9_0==24) ) {
                alt9=1;
            }
            switch (alt9) {
                case 1 :
                    // Dialog.g:86:58: '-p'
                    {
                    match(input,24,FOLLOW_24_in_remember_assignment405); 

                     isPersistent = true; 

                    }
                    break;

            }


             builder.remember((QUERY_STRING9!=null?QUERY_STRING9.getText():null), expression10, ExpirationTime.expiringAt(Long.parseLong((i1!=null?i1.getText():null)), i2, isPersistent)); 

            }

        }

        catch (RecognitionException e) {
            throw e;
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "remember_assignment"



    // $ANTLR start "criteria"
    // Dialog.g:90:1: criteria returns [Collection<String> eventNames] : 'criteria' ( 'events=' e1= IDENT ( ',' e2= IDENT )* ) (i1= IDENT '=' op1= expression |i2= IDENT '>' op2= expression |i3= IDENT '<' op3= expression |i4= IDENT '<=' op4= expression |i5= IDENT '>=' op5= expression |i6= IDENT '!=' op6= expression |i7= IDENT )* ;
    public final Collection<String> criteria() throws RecognitionException {
        Collection<String> eventNames = null;


        Token e1=null;
        Token e2=null;
        Token i1=null;
        Token i2=null;
        Token i3=null;
        Token i4=null;
        Token i5=null;
        Token i6=null;
        Token i7=null;
        Evaluator op1 =null;

        Evaluator op2 =null;

        Evaluator op3 =null;

        Evaluator op4 =null;

        Evaluator op5 =null;

        Evaluator op6 =null;


        try {
            // Dialog.g:90:49: ( 'criteria' ( 'events=' e1= IDENT ( ',' e2= IDENT )* ) (i1= IDENT '=' op1= expression |i2= IDENT '>' op2= expression |i3= IDENT '<' op3= expression |i4= IDENT '<=' op4= expression |i5= IDENT '>=' op5= expression |i6= IDENT '!=' op6= expression |i7= IDENT )* )
            // Dialog.g:91:5: 'criteria' ( 'events=' e1= IDENT ( ',' e2= IDENT )* ) (i1= IDENT '=' op1= expression |i2= IDENT '>' op2= expression |i3= IDENT '<' op3= expression |i4= IDENT '<=' op4= expression |i5= IDENT '>=' op5= expression |i6= IDENT '!=' op6= expression |i7= IDENT )*
            {
             eventNames = new ArrayList<String>(); 

            match(input,32,FOLLOW_32_in_criteria451); 

            // Dialog.g:92:16: ( 'events=' e1= IDENT ( ',' e2= IDENT )* )
            // Dialog.g:92:17: 'events=' e1= IDENT ( ',' e2= IDENT )*
            {
            match(input,34,FOLLOW_34_in_criteria454); 

            e1=(Token)match(input,IDENT,FOLLOW_IDENT_in_criteria458); 

             eventNames.add((e1!=null?e1.getText():null)); 

            // Dialog.g:92:68: ( ',' e2= IDENT )*
            loop10:
            do {
                int alt10=2;
                int LA10_0 = input.LA(1);

                if ( (LA10_0==22) ) {
                    alt10=1;
                }


                switch (alt10) {
            	case 1 :
            	    // Dialog.g:92:69: ',' e2= IDENT
            	    {
            	    match(input,22,FOLLOW_22_in_criteria464); 

            	    e2=(Token)match(input,IDENT,FOLLOW_IDENT_in_criteria468); 

            	     eventNames.add((e2!=null?e2.getText():null)); 

            	    }
            	    break;

            	default :
            	    break loop10;
                }
            } while (true);


            }


            // Dialog.g:93:5: (i1= IDENT '=' op1= expression |i2= IDENT '>' op2= expression |i3= IDENT '<' op3= expression |i4= IDENT '<=' op4= expression |i5= IDENT '>=' op5= expression |i6= IDENT '!=' op6= expression |i7= IDENT )*
            loop11:
            do {
                int alt11=8;
                int LA11_0 = input.LA(1);

                if ( (LA11_0==IDENT) ) {
                    switch ( input.LA(2) ) {
                    case 29:
                        {
                        alt11=1;
                        }
                        break;
                    case 30:
                        {
                        alt11=2;
                        }
                        break;
                    case 27:
                        {
                        alt11=3;
                        }
                        break;
                    case 28:
                        {
                        alt11=4;
                        }
                        break;
                    case 31:
                        {
                        alt11=5;
                        }
                        break;
                    case 15:
                        {
                        alt11=6;
                        }
                        break;
                    case IDENT:
                    case 26:
                        {
                        alt11=7;
                        }
                        break;

                    }

                }


                switch (alt11) {
            	case 1 :
            	    // Dialog.g:94:9: i1= IDENT '=' op1= expression
            	    {
            	    i1=(Token)match(input,IDENT,FOLLOW_IDENT_in_criteria492); 

            	    match(input,29,FOLLOW_29_in_criteria494); 

            	    pushFollow(FOLLOW_expression_in_criteria498);
            	    op1=expression();

            	    state._fsp--;


            	     NumberQueryPredicate.equalTo((i1!=null?i1.getText():null), op1); 

            	    }
            	    break;
            	case 2 :
            	    // Dialog.g:95:11: i2= IDENT '>' op2= expression
            	    {
            	    i2=(Token)match(input,IDENT,FOLLOW_IDENT_in_criteria514); 

            	    match(input,30,FOLLOW_30_in_criteria516); 

            	    pushFollow(FOLLOW_expression_in_criteria520);
            	    op2=expression();

            	    state._fsp--;


            	     NumberQueryPredicate.greaterThan((i2!=null?i2.getText():null), op2); 

            	    }
            	    break;
            	case 3 :
            	    // Dialog.g:96:11: i3= IDENT '<' op3= expression
            	    {
            	    i3=(Token)match(input,IDENT,FOLLOW_IDENT_in_criteria536); 

            	    match(input,27,FOLLOW_27_in_criteria538); 

            	    pushFollow(FOLLOW_expression_in_criteria542);
            	    op3=expression();

            	    state._fsp--;


            	     NumberQueryPredicate.lessThan((i3!=null?i3.getText():null), op3); 

            	    }
            	    break;
            	case 4 :
            	    // Dialog.g:97:11: i4= IDENT '<=' op4= expression
            	    {
            	    i4=(Token)match(input,IDENT,FOLLOW_IDENT_in_criteria558); 

            	    match(input,28,FOLLOW_28_in_criteria560); 

            	    pushFollow(FOLLOW_expression_in_criteria564);
            	    op4=expression();

            	    state._fsp--;


            	     NumberQueryPredicate.lessThanOrEqual((i4!=null?i4.getText():null), op4); 

            	    }
            	    break;
            	case 5 :
            	    // Dialog.g:98:11: i5= IDENT '>=' op5= expression
            	    {
            	    i5=(Token)match(input,IDENT,FOLLOW_IDENT_in_criteria580); 

            	    match(input,31,FOLLOW_31_in_criteria582); 

            	    pushFollow(FOLLOW_expression_in_criteria586);
            	    op5=expression();

            	    state._fsp--;


            	     NumberQueryPredicate.greaterThanOrEqual((i5!=null?i5.getText():null), op5); 

            	    }
            	    break;
            	case 6 :
            	    // Dialog.g:99:11: i6= IDENT '!=' op6= expression
            	    {
            	    i6=(Token)match(input,IDENT,FOLLOW_IDENT_in_criteria602); 

            	    match(input,15,FOLLOW_15_in_criteria604); 

            	    pushFollow(FOLLOW_expression_in_criteria608);
            	    op6=expression();

            	    state._fsp--;


            	     NumberQueryPredicate.not((i6!=null?i6.getText():null), op6);

            	    }
            	    break;
            	case 7 :
            	    // Dialog.g:100:11: i7= IDENT
            	    {
            	    i7=(Token)match(input,IDENT,FOLLOW_IDENT_in_criteria624); 

            	     NumberQueryPredicate.of((i7!=null?i7.getText():null), Predicates.<Number>alwaysTrue()); 

            	    }
            	    break;

            	default :
            	    break loop11;
                }
            } while (true);


            }

        }

        catch (RecognitionException e) {
            throw e;
        }

        finally {
        	// do for sure before leaving
        }
        return eventNames;
    }
    // $ANTLR end "criteria"



    // $ANTLR start "expression"
    // Dialog.g:103:1: expression returns [Evaluator value] : op1= mult ( '+' op2= mult | '-' op2= mult )* ;
    public final Evaluator expression() throws RecognitionException {
        Evaluator value = null;


        Evaluator op1 =null;

        Evaluator op2 =null;


        try {
            // Dialog.g:103:38: (op1= mult ( '+' op2= mult | '-' op2= mult )* )
            // Dialog.g:104:5: op1= mult ( '+' op2= mult | '-' op2= mult )*
            {
            pushFollow(FOLLOW_mult_in_expression655);
            op1=mult();

            state._fsp--;


             value = op1; 

            // Dialog.g:105:5: ( '+' op2= mult | '-' op2= mult )*
            loop12:
            do {
                int alt12=3;
                int LA12_0 = input.LA(1);

                if ( (LA12_0==21) ) {
                    alt12=1;
                }
                else if ( (LA12_0==23) ) {
                    alt12=2;
                }


                switch (alt12) {
            	case 1 :
            	    // Dialog.g:106:5: '+' op2= mult
            	    {
            	    match(input,21,FOLLOW_21_in_expression669); 

            	    pushFollow(FOLLOW_mult_in_expression673);
            	    op2=mult();

            	    state._fsp--;


            	     value = PlusEvaluator.create(value, op2); 

            	    }
            	    break;
            	case 2 :
            	    // Dialog.g:107:8: '-' op2= mult
            	    {
            	    match(input,23,FOLLOW_23_in_expression684); 

            	    pushFollow(FOLLOW_mult_in_expression688);
            	    op2=mult();

            	    state._fsp--;


            	     value = MinusEvaluator.create(value, op2); 

            	    }
            	    break;

            	default :
            	    break loop12;
                }
            } while (true);


            }

        }

        catch (RecognitionException e) {
            throw e;
        }

        finally {
        	// do for sure before leaving
        }
        return value;
    }
    // $ANTLR end "expression"



    // $ANTLR start "unary"
    // Dialog.g:110:1: unary returns [Evaluator value] : ( '+' | '-' )* term ;
    public final Evaluator unary() throws RecognitionException {
        Evaluator value = null;


        Evaluator term11 =null;


        try {
            // Dialog.g:110:33: ( ( '+' | '-' )* term )
            // Dialog.g:111:5: ( '+' | '-' )* term
            {
            boolean positive = true;

            // Dialog.g:112:5: ( '+' | '-' )*
            loop13:
            do {
                int alt13=3;
                int LA13_0 = input.LA(1);
